--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "moment": "^2.29.4",
     "mongoose": "^8.0.2",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2"
