--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "moment": "^2.29.4",
     "mongoose": "^8.0.2",
     "nodemon": "^3.0.1",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
